<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">CSlink</string>
    <string name="update_profile_schoolid">School name</string>
    <string name="aboutus_app">CSlink is an application for communication between school and parents. Important messages from the school sent to parents via app. Guardian get update about student\'s absence and get opportunity to notify the school. The solution is developed in collaboration with Tindlund High School at Sarpsborg Norway. </string>
    <string name="aboutus_copyright">Copyright 2015 Absent App Inc.</string>
    <string name="aboutus_all">All right reserved.</string>
    <string name="select_kid_done">Done</string>
    <string name="select_all">Select all</string>
    <string name="subjects">Subjects</string>
    <string name="msg_response">Phone number is not valid.\nPlease confirm your phone number
        again.
    </string>
    <string name="msg_invalid_phone_content">Phone number is not valid.\nPlease try again.</string>
    <string name="msg_no_password">Please enter password.</string>
    <string name="success_new_password">New password has been sent to your email address.</string>
    <string name="str_phone">Phone number</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="failed_confirm_passwd">The pincode could not be confirmed, please try again.
    </string>
    <string name="str_chat">Chat</string>
    <string name="msg_input_email">Please enter your email address.</string>
    <string name="msg_invalid_phone">Phone number is not valid.\nPlease confirm again.</string>
    <string name="loading_image">Loading image...</string>
    <string name="msg_input_parent2_phone">Please input parent2`s phone number.</string>
    <string name="msg_input_mobile">Please input your phone number.</string>
    <string name="str_reason_feber">Feber</string>
    <string name="str_from">From :</string>
    <string name="str_to">to</string>
    <string name="str_result">Results</string>
    <string name="str_fromdate">From date</string>
    <string name="str_todate">To date</string>
    <string name="msg_no_input_fromdate">Please select from date.</string>
    <string name="str_current_pincode">Current Pincode</string>
    <string name="aboutus_version">Version:1.1.7</string>
    <string name="str_versionstring">V e r s i o n - 1 . 1 . 7</string>
    <string name="error_msg">Please enter message</string>
    <string name="login_phone_hint">Phone Number</string>
    <string name="login_desc">Phone Number*</string>
    <string name="str_login">Next</string>
    <string name="register_child_button">New Register</string>
    <string name="language_english">English</string>
    <string name="language_norwgian">Norwegian</string>
    <string name="notification">Notification</string>
    <string name="aboutus">About Us</string>
    <string name="change_pincode">Change Pincode</string>
    <string name="todate">To Date</string>
    <string name="send">Send</string>
    <string name="message_hint">Message</string>
    <string name="new_pincode">New pincode</string>
    <string name="confirm_pincode">Confirm pincode</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_hint_parent1">PARENT 1</string>
    <string name="profile_hint_parent2">PARENT 2</string>
    <string name="profile_hint_phone_withoutdot">Mobile</string>
    <string name="profile_hint_phone2">Mobile 2 :</string>
    <string name="profile_hint_class">Class :</string>
    <string name="profile_hint_classincharge">Class Incharge</string>
    <string name="profile_button_update">Update</string>
    <string name="update_profile_header">Update Profile</string>
    <string name="update_profile_mobile">Mobile</string>
    <string name="select_kid">Select Student</string>
    <string name="select_subject">Select subject</string>
    <string name="msg_invalidphone">Invalid phone number.</string>
    <string name="msg_no_phone">Please enter phone number.</string>
    <string name="msg_not_register_phone">Your phone number not registered.</string>
    <string name="msg_operation_error">Please check internet connection and try again.</string>
    <string name="str_network_error">Network error</string>
    <string name="str_wait">Please wait...</string>
    <string name="str_english">English</string>
    <string name="str_norwegian">Norwegian</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_ok">OK</string>
    <string name="str_success">Success</string>
    <string name="str_alert">Alert</string>
    <string name="str_loading">Loading...</string>
    <string name="update_dontshow">Do not show again this message.</string>
    <string name="str_forgot_pincode">Forgot pin code?</string>
    <string name="str_input_pincode_desc">Please input your pincode.</string>
    <string name="str_pincode">Pincode</string>
    <string name="msg_fill_require">Please fill out the required fields.</string>
    <string name="msg_wrong_pincode">Wrong pincode.</string>
    <string name="success_send_pincode">Pincode had been sent to your SMS.</string>
    <string name="str_logout">Logout</string>
    <string name="msg_confirm_logout">Do you want to Log out?</string>
    <string name="str_message">Message</string>
    <string name="str_select_student">Select Student</string>
    <string name="str_input_message">Please input your email address and message.</string>
    <string name="str_profile">Profile</string>
    <string name="str_name">Name :</string>
    <string name="str_school">School</string>
    <string name="str_edit">Edit</string>
    <string name="add_photo">Add photo</string>
    <string name="photo_album">Select photo</string>
    <string name="camera">Take photo</string>
    <string name="myprofile_photo_sel_remove_text">Remove photo</string>
    <string name="cancel">Cancel</string>
    <string name="success_update_profile">Profile has been updated.</string>
    <string name="msg_invalidparent2phone">Invalid parent2 phone number.</string>
    <string name="msg_invalidparent1phone">Invalid parent1 phone number.</string>
    <string name="msg_input_name">Please input child`s name.</string>
    <string name="msg_input_parent1_name">Please input parent1`s name.</string>
    <string name="msg_input_parent1_phone">Please input parent1`s phone number.</string>
    <string name="msg_input_parent2_name">Please input parent2`s name.</string>
    <string name="title_important_notice">Teacher Message!</string>
    <string name="success_submit_report">Successfully submitted your reports.</string>
    <string name="msg_child_not_exist">Child does not exist.</string>
    <string name="msg_no_period">Please select full day or a period.</string>
    <string name="msg_no_reason">Please select reason for the absent and try again!</string>
    <string name="msg_no_value_template">No values in templates</string>
    <string name="str_period">Periods</string>
    <string name="str_absentreport">Absent report</string>
    <string name="str_schoolname">School name =</string>
    <string name="str_isreason">Reason =</string>
    <string name="str_istotalabsent">Total absent =</string>
    <string name="str_istotalhours">Total hours =</string>
    <string name="str_istotaldays">Total days =</string>
    <string name="str_istodate">To date =</string>
    <string name="str_isfromdate">From date =</string>
    <string name="str_isparentname">Parent name =</string>
    <string name="str_isteacherincharge">Teacher inCharge =</string>
    <string name="str_isstudentname">Student Name</string>
    <string name="str_istelphone">Telephone =</string>
    <string name="str_isemail">eMail =</string>
    <string name="msg_send_error">There is no absent result to show.</string>
    <string name="str_days">Day(s)</string>
    <string name="msg_no_absent_recode">No absent records.</string>
    <string name="msg_no_childinfo">There is no child information.</string>
    <string name="msg_no_input_todate">Please input to date.</string>
    <string name="success_create_pdf">Sucessfully created a pdf.</string>
    <string name="str_get_report">Recieve report</string>
    <string name="str_hours">Hour(s)</string>
    <string name="msg_success_feedback">Thanks for your feedback!</string>
    <string name="str_settings">Settings</string>
    <string name="str_notificatoin">Notification</string>
    <string name="str_aboutus">About us</string>
    <string name="str_change_pincode">Change Pincode</string>
    <string name="str_new_pincode">New Pincode</string>
    <string name="str_confirm_pincode">Confirm Pincode</string>
    <string name="msg_pincode_notmatched">The new pincode and confirmation pincode do not match.
    </string>
    <string name="msg_no_currentpincode">Please input your current pincode.</string>
    <string name="msg_no_newpincode">Please input a new pincode.</string>
    <string name="msg_no_confirmpincode">Please input a confirmation pincode.</string>
    <string name="msg_success_change_pincode">Pincode has been changed successfully</string>
    <string name="str_failed">Failed!!!</string>
    <string name="verify_desc">Enter the verification code of 6 digits</string>
    <string name="str_verificaton_code">Verification Code</string>
    <string name="title_invalid_vericod">Invalid verificaion code</string>
    <string name="msg_invalidvericod">The verification code is invalid. Please try to confirm
        verification code again.
    </string>
    <string name="str_title_error">Error!</string>
    <string name="title_absent_notice">Absent Notice</string>
    <string name="msg_parent_not_exist">Other parents does not exist.</string>
    <string name="str_isphone">Phone number is</string>
    <string name="msg_no_email">Please enter your email address.</string>
    <string name="msg_invalid_email">Email is not valid.\nPlease confirm again.</string>
    <string name="str_phone_number">Phone number</string>
    <string name="str_register">Register</string>
    <string name="str_email1">Email 1 :</string>
    <string name="str_email2">Email 2 :</string>
    <string name="str_input_register_desc">Please input your profile information.</string>
    <string name="str_email_address">Email address</string>
    <string name="str_parent_name">Full name*</string>
    <string name="str_parent_name2">Full name</string>
    <string name="failed_new_register">New member account registration failed.\n Please try again
        later.
    </string>
    <string name="success_new_register1">Successfully registered/you can login with entered number
        to complete the registration.
    </string>
    <string name="success_new_register2">Thanks for registration, your account will be ready to use
        within 24 hours. For more info contact your school.
    </string>
    <string name="success_new_register">Welcome! as a new member, please login with the number you
        registered.
    </string>
    <string name="failed_duplicated_phone">New member registration failed, this number is already in use, please try a different phone number.
    </string>
    <string name="failed_sms_send">Sorry your number could not be activated, please enter another
        mobile number and try again.
    </string>
    <string name="str_add_newchild">Add New Student</string>
    <string name="str_close">Close</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="semester">Semester</string>
    <string name="subject_name">Subject name</string>
    <string name="marks">Marks</string>
    <string name="no_data">No info to show</string>
    <string name="str_emeregency">This is an alert message</string>
    <string name="about_link">www.cslink.no</string>
    <string name="suppport">support@cslink.no</string>
    <string name="more_info">More information is available at</string>
</resources>