<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:id="@+id/rootView"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/ten_all_side_padding"
              android:layout_marginRight="@dimen/ten_all_side_padding"
              android:background="@drawable/alert_dialog_bg"
              android:gravity="center_vertical"
              android:orientation="vertical"
              android:paddingBottom="@dimen/two_dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/fiften_space"
        android:paddingLeft="@dimen/thirty_top"
        android:paddingTop="@dimen/fiften_space"
        >


        <com.widget.textstyle.MyTextView_Signika_Semibold
            style="@style/poupimage_textview"
            android:layout_gravity="center"
            android:text="@string/add_photo"
            android:textSize="@dimen/dialog_title_size"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/confirm_dlg_header_line_height"
        android:background="@color/confirm_dlg_header_line_color"/>

    <RelativeLayout
        android:id="@+id/lyt_album"
        style="@style/popupimagepicker"
        android:layout_marginTop="@dimen/two_dp"
        >

        <com.widget.textstyle.MyTextView_Signika_Regular
            android:id="@+id/txt_mn"
            style="@style/poupimage_textview"
            android:text="@string/photo_album"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="@dimen/menu_img_size"
        android:background="@color/view_light_blue"/>

    <RelativeLayout
        android:id="@+id/lyt_camera"
        style="@style/popupimagepicker"
        >

        <com.widget.textstyle.MyTextView_Signika_Regular
            android:id="@+id/txt_kp"
            style="@style/poupimage_textview"
            android:text="@string/camera"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/half_dpi"
        android:layout_marginLeft="@dimen/menu_img_size"
        android:background="@color/view_light_blue"/>

    <RelativeLayout
        android:id="@+id/lyt_remove"
        style="@style/popupimagepicker"
        >

        <com.widget.textstyle.MyTextView_Signika_Regular
            android:id="@+id/txt_remove"
            style="@style/poupimage_textview"
            android:text="@string/myprofile_photo_sel_remove_text"
            />

    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="@dimen/menu_img_size"
        android:background="@color/view_light_blue"/>
    <RelativeLayout
        android:id="@+id/lyt_cancel"
        style="@style/popupimagepicker"
        >

        <com.widget.textstyle.MyTextView_Signika_Regular
            android:id="@+id/txt_cancel"
            style="@style/poupimage_textview"
            android:text="@string/cancel"
            />

    </RelativeLayout>

</LinearLayout>