<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                android:orientation="vertical">

    <include
        android:id="@+id/incl"
        layout="@layout/header_activity" />

    <ScrollView style="@style/scroll_bar"
                android:layout_below="@+id/incl">

        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/ImageAppLogog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/thirty_top"
                    android:src="@drawable/logo_cslink"/>

                <com.widget.textstyle.MyTextView_Signika_Regular
                    android:id="@+id/txt_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="left|center_vertical"
                    android:padding="@dimen/fiften_space"
                    android:text="@string/aboutus_app"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/normal_text_size"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lin_about"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" android:layout_below="@+id/header"
                android:layout_gravity="bottom" android:orientation="vertical"
                android:padding="20dp">
                <com.widget.textstyle.MyTextView_Signika_Regular
                    style="@style/txt_about"
                    android:text="@string/more_info"/>

                <com.widget.textstyle.MyTextView_Signika_Regular
                    android:id="@+id/txt_support"
                    style="@style/txt_about"
                    android:text="@string/suppport"
                    android:textColor="@color/white_light"
                    android:textSize="@dimen/eighteen_size"/>

                <com.widget.textstyle.MyTextView_Signika_Regular
                    android:id="@+id/txt_link"
                    style="@style/txt_about"
                    android:text="@string/about_link"
                    android:textColor="@color/white_light"
                    android:textSize="@dimen/eighteen_size"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

