<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/ten_all_side_padding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_size"
        android:orientation="horizontal"
        >

        <com.widget.textstyle.MyTextView_Signika_Semibold
            android:id="@+id/txt_sem_nm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:capitalize="characters"
            android:inputType="textCapCharacters"
            android:text="@string/semester"
            android:textColor="@color/color_blue_p"
            android:textSize="@dimen/normal_text_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_half_dpi"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="@color/color_blue_p"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_size"
        android:orientation="horizontal"
        >

        <com.widget.textstyle.MyTextView_Signika_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.55"
            android:gravity="left|center_vertical"
            android:text="@string/subject_name"
            android:textColor="@color/white_light"
            android:textSize="@dimen/normal_text_size"/>

        <com.widget.textstyle.MyTextView_Signika_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.45"
            android:gravity="left|center_vertical"
            android:text="@string/marks"
            android:textColor="@color/white_light"
            android:textSize="@dimen/normal_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_size"
        android:orientation="vertical"
        android:visibility="gone">

        <com.widget.textstyle.MyTextView_Signika_Regular
            android:id="@+id/txt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/white_light"
            android:textSize="@dimen/normal_text_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/half_dpi"
            android:background="@color/light_line_blue"
            android:layout_marginTop="@dimen/ten_all_side_padding"/>
    </LinearLayout>
</LinearLayout>