<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark_blue"
                android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:layout_marginLeft="@dimen/fiften_space"
                  android:layout_marginRight="@dimen/fiften_space"
                  android:background="@drawable/alert_dialog_bg"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/top_leftright_corner_header_red"
                      android:gravity="center"
                      android:orientation="vertical"
                      android:padding="@dimen/menu_img_size">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:src="@drawable/alert_emergency"
                />
        </LinearLayout>

        <com.widget.textstyle.MyTextView_Signika_Semibold
            android:id="@+id/txt_emgncy_title"
            style="@style/alert_dialog_text"
            android:text="@string/str_emeregency"
            android:textColor="@color/red"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"/>

        <com.widget.textstyle.MyTextView_Signika_Regular
            android:id="@+id/txt_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/five_all_side_padding"
            android:text="@string/str_alert"
            android:textSize="@dimen/normal_text_size"/>

        <com.widget.textstyle.MyTextView_Signika_Regular
            android:id="@+id/txt_msg"
            style="@style/alert_dialog_text"
            android:padding="@dimen/five_all_side_padding"
            android:text="@string/msg_confirm_logout"
            android:textColor="@color/color_black"
            android:textSize="@dimen/normal_text_size"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/lin_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="@dimen/twenty_size"
            android:background="@drawable/txt_cmd_red">

            <com.widget.textstyle.MyButton_Signika_Semibold
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_close"
                android:background="@null"
                android:minWidth="@dimen/one_twenty"
                android:textColor="@color/color_white"
                android:textSize="@dimen/large_text_size"
                />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>